--- a/views/editClient.ejs
+++ b/views/editClient.ejs
@@ -23,40 +23,50 @@
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
                   <h3>Datos del cliente</h3>
                     <form action="/UpdateClient" method="post" class="needs-validation" novalidate>
-                      <div class="mb-2">
-                        <label for="Nombre" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="Id_cl" name="Id_cl" value="<%= cliente.Id_Persona %>" hidden>
-                        <input type="text" class="form-control" id="Nombre" name="Nombre_cl" value="<%= cliente.Nombre %>" required>
-                        <div class="invalid-feedback">Es necesario el Nombre</div>
-                      </div>
-                      <div class="mb-2">
-                        <label for="Apellido" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="Apellido" name="Apellido_cl" value="<%= cliente.Apellido %>" required>
-                        <div class="invalid-feedback">Es necesario el Apellido</div>
-                      </div>
-                      <div class="mb-2">
-                          <label for="Telefono" class="form-label">Telefono</label>
-                          <input type="number" class="form-control" id="Telefono" name="Telefono_cl" value="<%= cliente.Telefono %>" required>
-                          <div class="invalid-feedback">Es necesario el Número teléfonico</div>
+                        <!-- Nombres -->
+                        <div class="mt-3 mb-2">
+                          <label for="Nombre" class="form-label fw-bold">Nombres del Cliente</label>
+                          <input type="text" class="form-control" id="Id_cl" name="Id_cl" value="<%= cliente.Id_Persona %>" hidden>
+                          <input type="text" class="form-control" id="Tipo" name="Tipo_cl" placeholder="Tipo" value="Cliente"  hidden/>
+                          <input type="text" class="form-control" id="Nombre" name="Nombre_cl" placeholder="Nombres del Cliente" value="<%= cliente.Nombre %>" required/>
+                          <div class="invalid-feedback">Por favor ingrese los Nombres del Cliente</div>
                         </div>
+
+                        <!-- Apellidos -->
                         <div class="mb-2">
-                          <label for="Cedula" class="form-label">Cedula</label>
-                          <input type="text" class="form-control" id="Cedula" name="Cedula_cl" value="<%= cliente.Cedula %>" required>
-                          <div class="invalid-feedback">Es necesario el número de cédula</div>
+                          <label for="Apellido" class="form-label fw-bold">Apellidos del cliente</label>
+                          <input type="text" class="form-control" id="Apellido" name="Apellido_cl" placeholder="Apellidos del cliente" value="<%= cliente.Apellido %>" required/>
+                          <div class="invalid-feedback">Por favor ingrese los Apellidos del Cliente</div>
                         </div>
-                        <div class="mb-1">
-                          <label for="Distrito_cl" class="form-label">Dirección</label>
-                          <select id="Distrito" name="Distrito_cl" class="form-select mb-2" aria-label="Distrito" required>
-                            <option selected disabled value="">Seleccionar Distrito...</option>
-  
+
+                        <!-- Telefono -->
+                        <div class="mb-2">
+                          <label for="Telefono" class="form-label fw-bold">Teléfono  del cliente</label>
+                          <input type="number" class="form-control" id="Telefono" name="Telefono_cl" placeholder="Teléfono del cliente" value="<%= cliente.Telefono %>" required/>
+                          <div class="invalid-feedback">Por favor ingrese el numero de teléfono del Cliente</div>
+                        </div>
+
+                        <!-- Cedula -->
+                        <div class="mb-2">
+                          <label for="Cedula" class="form-label  fw-bold">Cédula  del cliente</label>
+                          <input type="text" class="form-control" id="Cedula" name="Cedula_cl" placeholder="Cédula del cliente" value="<%= cliente.Cedula %>"  required/>
+                          <div class="invalid-feedback">Por favor ingrese el número de cédula del cliente</div>
+                        </div>
+
+                        <!-- Direccion -->
+                        <div class="mb-1 position-relative">
+                          <h5 class="my-3 fw-bold">Dirección del Cliente</h5>
+                          <label for="Distrito_cl" class="form-label fw-bold">Seleccione el Distrito</label>
+                          <select id="Distrito" name="Distrito_cl" class="form-select mb-2 position-relative" aria-label="Distrito" required>
+                            <option selected disabled value="">Seleccione el  Distrito... </option>
                             <% if (cliente.Distrito == 'I') { %>
                               <option value="I" selected>Distrito I</option>
                             <% } else { %> <option value="I">Distrito I</option> <% } %> 
-        
+                    
                             <% if (cliente.Distrito == 'II') { %>
                               <option value="II" selected>Distrito II</option>
                             <% } else { %> <option value="II">Distrito II</option><% } %> 
-        
+                    
                             <% if (cliente.Distrito == 'III') { %>
                               <option value="III" selected>Distrito III</option>
                             <% } else { %> <option value="III">Distrito III</option> <% } %> 
@@ -64,41 +74,77 @@
                             <% if (cliente.Distrito == 'IV') { %>
                               <option value="IV" selected>Distrito IV</option>
                             <% } else { %> <option value="IV">Distrito IV</option> <% } %> 
-        
+                    
                             <% if (cliente.Distrito == 'V') { %>
                               <option value="V" selected>Distrito V</option>
                             <% } else { %> <option value="V">Distrito V</option> <% } %> 
-        
+                    
                             <% if (cliente.Distrito == 'VI') { %>
                               <option value="VI" selected>Distrito VI</option>
                             <% } else { %> <option value="VI">Distrito VI</option> <% } %>  
-        
+                    
                             <% if (cliente.Distrito == 'VII') { %>
                               <option value="VII" selected>Distrito VII</option>
                             <% } else { %> <option value="VII">Distrito VII</option> <% } %>  
+                            
                           </select>
-                          <div class="invalid-feedback">Es necesario el Distrito</div>
+                          <div class="invalid-feedback">Por favor ingrese el Distrito</div>
                         </div>
-                        
-                        <div class="mb-2 dx-2">
-                          <label for="Residencia" class="form-label">Zona de Residencia</label>
-                          <input type="text" class="form-control" id="Residencia" name="Residencia_cl" value="<%= cliente.Zona_Residencia %>" required>
-                          <div class="invalid-feedback">Es necesario la zona de residencia</div>
-                        </div>
+
+                        <!-- Zona de Residencia -->
                         <div class="mb-2">
-                          <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
-                          <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" value="<%= cliente.Punto_Referencia %>" required>
-                          <div class="invalid-feedback">Es necesario el punto de referencia</div>
+                          <label for="Residencia" class="form-label fw-bold">Zona de Residencia</label>
+                          <input type="text" class="form-control" id="Residencia" name="Residencia_cl" placeholder="Zona de Residencia" value="<%= cliente.Zona_Residencia %>" required />
+                          <div class="invalid-feedback">Por favor ingrese la Zona de Residencia</div>
                         </div>
+
+                        <!-- P. Referencia -->
                         <div class="mb-2">
-                          <label for="Distancia" class="form-label">Distancia</label>
-                          <input type="text" class="form-control" id="Distancia" name="Distancia_cl" value="<%= cliente.Distancia %>">
+                          <label for="PuntoReferencia" class="form-label  fw-bold">Punto de Referencia</label>
+                          <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" placeholder="Punto de Referencia" value="<%= cliente.Punto_Referencia %>" required/>
+                          <div class="invalid-feedback">Por favor ingrese el Punto de Referencia</div>
                         </div>
+
+                        <!-- Distancia -->
                         <div class="mb-2">
-                          <label for="Casa" class="form-label">Numero de casa</label>
-                          <input type="text" class="form-control" id="Casa" name="Casa_cl" value="<%= cliente.Casa %>" required>
-                          <div class="invalid-feedback">Es necesario el número de Casa</div>
+                          <label for="Distancia" class="form-label fw-bold">Distancia</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="Distancia"
+                            name="Distancia_cl"
+                            placeholder="Distancia"
+                            value="<%= cliente.Distancia %>"
+                          />
                         </div>
+
+                        <!-- Casa -->
+                        <div class="mb-2">
+                          <label for="Casa" class="form-label fw-bold"
+                            >Información de la casa</label
+                          >
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="Casa"
+                            name="Casa_cl"
+                            placeholder="N. Casa y/o color"
+                            required
+                            value="<%= cliente.Casa %>"
+                          />
+                          <div class="invalid-feedback">Por favor ingrese la información de la casa</div>
+                        </div>
+
+
+
+
+
+
+
+
+                      
+
+
                         <div class="d-grid gap-2 mb-5">
                           <button type="submit" class="btn btn-success" title="Editar">Editar</button>
                         </div>
