--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -25,7 +25,7 @@
         
         <li>
           <a href="/inicio">
-            <i class="bx bx-grid-alt"></i>
+            <i class='bx bxs-home'></i>
             <span class="links_name">Inicio</span>
           </a>
           <span class="tooltip">Inicio</span>
@@ -82,7 +82,7 @@
           <span class="tooltip">Abonos</span>
         </li>
 
-        <li class="mt-5">
+        <li>
           <a href="#">
             <i class='bx bx-log-out' ></i>
             <span class="links_name">Cerrar Sesión</span>
