--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -15,6 +15,7 @@
     <section class="home-section">
       <div class="Container px-3">
         <div class="row">
+
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h3><b>Registro de productos</b></h3><br>
             <div class="mb-3">
@@ -22,6 +23,8 @@
             </div>
 
             <form action="/AddProduct" method="post" class="row needs-validation g-3 py-3" novalidate> 
+              
+              <!-- Categoria -->
               <div>
                 <select class="form-select"  aria-label="Seleccione una categoria" id="categoria"  required>
                   <option selected disabled value="" >Seleccione una categoria</option>
@@ -31,70 +34,103 @@
                   <option value="4">Electrodomestico</option>
                   <option value="5">Productos Plasticos</option>
                 </select>
-                <div class="invalid-feedback">No ha seleccionado la categoría</div>
+                <div class="invalid-feedback">Por favor seleccione la categoria del producto</div>
               </div>
+
+              <!-- Fecha Ingreso 
+              <div class="col-md-6">
+                <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
+                <input type="date" class="form-control" id="FechaIngreso" name="Fecha_Ingreso" required>
+                <div class="invalid-feedback">Por favor ingrese la fecha de ingreso del producto</div>
+              </div> -->
+
+              <!-- Marca -->
               <div class="col-md-6">
                 <label for="Marca" id="Marcalb" class="form-label">Marca</label>
-                <input type="text" class="form-control" id="Marca" placeholder="aqui" name="Marca" required>
-                <div class="invalid-feedback">La marca es requerida</div>
+                <input type="text" class="form-control" id="Marca" name="Marca" required>
+                <div class="invalid-feedback">Por favor ingrese la marca del producto</div>
                 <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden>
               </div>
-
+              
+              <!-- Tipo -->
               <div class="col-md-6">
-                <label for="Existencia" class="form-label">Existencia del producto</label>
-                <input type="number" class="form-control" id="Existencia" name="Existencia" required>
-                <div class="invalid-feedback">La existencia es requerida</div>
+                <label for="Tipo" class="form-label">Tipo de producto</label>
+                <input type="text" class="form-control" id="Tipo" name="Tipo" required>
+                <div class="invalid-feedback">Por favor ingrese el Tipo de producto</div>
               </div>
 
-              <div class="col-md-6">
-                <label for="Precio" class="form-label">Precio del Producto</label>
-                <input type="number" class="form-control" id="Precio" name="Precio" required>
-              </div>
-
+              <!-- Color -->
               <div class="col-md-6">
                 <label for="Color" class="form-label">Color del producto</label>
                 <input type="text" class="form-control" id="Color" name="Color" required>
+                <div class="invalid-feedback">Por favor ingrese el Color del producto</div>
               </div>  
 
+<!--                Precio Compra 
               <div class="col-md-6">
-                  <label for="Tipo" class="form-label">Tipo de producto</label>
-                  <input type="text" class="form-control" id="Tipo" name="Tipo" required>
+                <label for="Precio" class="form-label">Precio de Compra</label>
+                <input type="number" class="form-control" id="Precio" name="Precio_Compra" required>
+                <div class="invalid-feedback">Por favor ingrese el precio de compra del producto</div>
               </div>
 
+              Precio Venta 
               <div class="col-md-6">
-                <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
-                <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required>
-              </div>
-
+                <label for="Precio" class="form-label">Precio de Venta</label>
+                <input type="number" class="form-control" id="Precio" name="Precio_Venta" required>
+                <div class="invalid-feedback">Por favor ingrese el precio de venta del producto</div>
+              </div> -->
+  
+              <!-- Talla -->
               <div class="col-md-6" id="Talladiv">
                 <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
                 <input type="text" class="form-control" id="Talla" name="Talla" required>
-                <div class="invalid-feedback">La Talla es requerida</div>
+                <div class="invalid-feedback">Por favor ingrese la talla del producto</div>
               </div>
 
+              <!-- Modelo -->
               <div class="col-md-6" id="Modelodiv">
                 <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
                 <input type="text" class="form-control" id="Modelo" name="Modelo" required>
-                <div class="invalid-feedback">El Modelo es requerido</div>
+                <div class="invalid-feedback">Por favor ingrese el Modelo del producto</div>
               </div>
 
-              <div class="col-md-6" id="Clasificaciondiv">
-                <label for="Clasificacion" id="Clasificacionlb" class="form-label">Clasificacion</label>
-                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" required>
-                <div class="invalid-feedback">La Clasificacion es requerida</div>
+              <!-- Clasificación y Fecha Vencimiento -->
+              <div id="Cosmeticos" class="container">
+                <div class="row">
 
-              </div>
-              <div class="col-md-6" id="plasticos">
-                <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones</label>
-                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" required>
-                <div class="invalid-feedback">La Dimension es requerida</div>
+                  <div class="col-md-6" id="Clasificaciondiv">
+                    <label for="Clasificacion" id="Clasificacionlb" class="form-label">Clasificacion</label>
+                    <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" required>
+                    <div class="invalid-feedback">Por favor ingrese la Clasificación del producto</div>
+                  </div>
 
-                <div>
-                  <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
-                  <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" required>
-                  <div class="invalid-feedback">La Medida es requerida</div>
+                  <div class="col-md-6" >
+                    <label id="FechaVencimientolb"for="FechaVencimiento" class="form-label">Fecha de Vencimiento</label>
+                    <input type="date" class="form-control" id="FechaVencimiento" name="Fecha_Vencimiento" required>
+                    <div class="invalid-feedback">Por favor ingrese la fecha de vencimiento del producto</div>
+                  </div>
+
                 </div>
-              </div>
+              </div> 
+
+              <!-- Dimensiones  -->
+              <div id="plasticos" class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones del Producto</label>
+                    <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" required>
+                    <div class="invalid-feedback">Por favor ingrese las dimensiones del producto</div>  
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida de las Dimensiones</label>
+                    <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" required>
+                    <div class="invalid-feedback">Por favor ingrese la unidad de medida de las dimensiones del producto</div>
+                  </div>
+
+                </div>
+              </div> 
+
 
               <div class="d-grid gap-2">
                 <button title="Guardar Producto" type="submit" class="btn btn-success">Guardar Producto</button>
@@ -174,6 +210,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/resources/js/script.js"></script>
     <script src="/resources/js/ScriptProducts.js"></script>
+
     <!-- codigo js para las validaciones-->
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
