--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -28,11 +28,12 @@
               <label for="text" class="form-label"><b>Seleccione la categoria del producto a añadir</b></label>
             </div>
 
-            <select class="form-select" aria-label="Seleccione una categoria" id="categoria" required>
+            <select class="form-select" aria-label="Seleccione una categoria" id="categoria" disabled>
               <option disabled value="">Seleccione una categoria</option>
 
               <% if ( Categoria == 'Calzado') { %>
               <option value="1" selected>Calzado</option>
+              
               <% } else { %>
               <option value="1">Calzado</option>
               <% } %> <% if ( Categoria == 'Prendas_Vestir') { %>
@@ -54,73 +55,101 @@
               <% } %>
             </select>
 
-            <form action="/AddProduct" method="post" class="row g-3 py-3 needs-validation" novalidate>
-              <div class="col-md-6">
-                <label for="Marca" id="Marcalb" class="form-label">Marca</label>
-                <input type="text" class="form-control" id="Marca" name="Marca" required/>
-                <div class="invalid-feedback">La Marca es requerida</div>
-                <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden/>
-              </div>
-
-              <div class="col-md-6">
-                <label for="Existencia" class="form-label">Existencia del producto</label>
-                <input type="number" class="form-control" id="Existencia" name="Existencia" required/>
-                <div class="invalid-feedback">La Existencia es requerida</div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="Precio" class="form-label">Precio del Producto</label>
-                <input type="number" class="form-control" id="Precio" name="Precio" required/>
-                <div class="invalid-feedback">El Precio es requerido</div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="Color" class="form-label">Color del producto</label>
-                <input type="text" class="form-control" id="Color" name="Color" required/>
-                <div class="invalid-feedback">El Color es requerido</div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="Tipo" class="form-label">Tipo de producto</label>
-                <input type="text" class="form-control" id="Tipo" name="Tipo" required/>
-                <div class="invalid-feedback">El Tipo de Producto es requerido</div>
-              </div>
-
+            <form action="/AddProduct" method="post" class="row needs-validation g-3 py-3" novalidate> 
+              <!-- Fecha Ingreso -->
               <div class="col-md-6">
                 <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
-                <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required/>
-                <div class="invalid-feedback">La Fecha es requerida</div>
+                <input type="date" class="form-control" id="FechaIngreso" name="Fecha_Ingreso" required>
+                <div class="invalid-feedback">Por favor ingrese la fecha de ingreso del producto</div>
               </div>
 
+              <!-- Marca -->
               <div class="col-md-6">
+                <label for="Marca" id="Marcalb" class="form-label">Marca</label>
+                <input type="text" class="form-control" id="Marca" name="Marca" required>
+                <div class="invalid-feedback">Por favor ingrese la marca del producto</div>
+                <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden>
+              </div>
+              
+              <!-- Tipo -->
+              <div class="col-md-6">
+                <label for="Tipo" class="form-label">Tipo de producto</label>
+                <input type="text" class="form-control" id="Tipo" name="Tipo" required>
+                <div class="invalid-feedback">Por favor ingrese el Tipo de producto</div>
+              </div>
+
+              <!-- Color -->
+              <div class="col-md-6">
+                <label for="Color" class="form-label">Color del producto</label>
+                <input type="text" class="form-control" id="Color" name="Color" required>
+                <div class="invalid-feedback">Por favor ingrese el Color del producto</div>
+              </div>  
+
+              <!-- Precio Compra -->
+              <div class="col-md-6">
+                <label for="Precio" class="form-label">Precio de Compra</label>
+                <input type="number" class="form-control" id="Precio" name="Precio_Compra" required>
+                <div class="invalid-feedback">Por favor ingrese el precio de compra del producto</div>
+              </div>
+
+              <!-- Precio Venta -->
+              <div class="col-md-6">
+                <label for="Precio" class="form-label">Precio de Venta</label>
+                <input type="number" class="form-control" id="Precio" name="Precio_Venta" required>
+                <div class="invalid-feedback">Por favor ingrese el precio de venta del producto</div>
+              </div>
+  
+              <!-- Talla -->
+              <div class="col-md-6" id="Talladiv">
                 <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
-                <input type="text" class="form-control" id="Talla" name="Talla" required/>
-                <div class="invalid-feedback">La Talla es requerida</div>
+                <input type="text" class="form-control" id="Talla" name="Talla" required>
+                <div class="invalid-feedback">Por favor ingrese la talla del producto</div>
               </div>
 
-              <div class="col-md-6">
+              <!-- Modelo -->
+              <div class="col-md-6" id="Modelodiv">
                 <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
-                <input type="text" class="form-control" id="Modelo" name="Modelo" required/>
-                <div class="invalid-feedback">El Modelo es requerido</div>
+                <input type="text" class="form-control" id="Modelo" name="Modelo" required>
+                <div class="invalid-feedback">Por favor ingrese el Modelo del producto</div>
               </div>
 
-              <div class="col-md-6">
-                <label for="Clasificacion" id="Clasificacionlb" class="form-label" >Clasificacion</label>
-                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" required/>
-                <div class="invalid-feedback">La Clasificacion es requerida</div>
-              </div>
+              <!-- Clasificación y Fecha Vencimiento -->
+              <div id="Cosmeticos" class="container">
+                <div class="row">
 
-              <div class="col-md-6">
-                <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones</label>
-                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" required/>
-                <div class="invalid-feedback">La Dimension es requerida</div>
+                  <div class="col-md-6" id="Clasificaciondiv">
+                    <label for="Clasificacion" id="Clasificacionlb" class="form-label">Clasificacion</label>
+                    <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" required>
+                    <div class="invalid-feedback">Por favor ingrese la Clasificación del producto</div>
+                  </div>
 
-                <div>
-                  <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
-                  <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" required/>
-                  <div class="invalid-feedback">La Medida es requerida</div>
+                  <div class="col-md-6" >
+                    <label id="FechaVencimientolb"for="FechaVencimiento" class="form-label">Fecha de Vencimiento</label>
+                    <input type="date" class="form-control" id="FechaVencimiento" name="Fecha_Vencimiento" required>
+                    <div class="invalid-feedback">Por favor ingrese la fecha de vencimiento del producto</div>
+                  </div>
+
                 </div>
-              </div>
+              </div> 
+
+              <!-- Dimensiones  -->
+              <div id="plasticos" class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones del Producto</label>
+                    <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" required>
+                    <div class="invalid-feedback">Por favor ingrese las dimensiones del producto</div>  
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida de las Dimensiones</label>
+                    <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" required>
+                    <div class="invalid-feedback">Por favor ingrese la unidad de medida de las dimensiones del producto</div>
+                  </div>
+
+                </div>
+              </div> 
+
 
               <div class="d-grid gap-2">
                 <button title="Guardar Producto" type="submit" class="btn btn-success">Guardar Producto</button>
@@ -152,10 +181,14 @@
               <thead>
                 <tr>
                   <th class="centrado">Producto</th>
-                  <th class="centrado">Precio</th>
-                  <th class="centrado">Stock</th>
+                  <th class="centrado">Precio de Compra</th>
+                  <th class="centrado">Precio de Venta</th>
                   <th class="centrado">Fecha Ingreso</th>
-                  <th class="centrado">Acciones</th>
+                  <% if ( Categoria == 'Cosmeticos') { %>
+                    <th class="centrado">Fecha Vencimiento</th>
+                  <% } %>
+                  <th class="centrado">Existencias</th>
+                  <th class="centrado"></th>
                 </tr>
               </thead>
               
@@ -163,9 +196,29 @@
                 <% Producto.forEach((product) => { %>
                   <tr>
                     <td class="centrado"><%= product.Descripcion %></td>
-                    <td class="centrado">C$ <%= product.Precio %></td>
-                    <td class="centrado"><%= product.Existencia %> unidades</td>
-                    <td class="centrado"><%= product.Fecha_Ingreso %></td>
+
+                    <% if ( product.Precio_Compra == null ) { %>
+                      <td class="centrado">C$ 0 </td>
+                    <% } else { %>
+                      <td class="centrado">C$ <%= product.Precio_Compra %></td>
+                    <% } %>
+
+                    <% if ( product.Precio_Venta == null ) { %>
+                      <td class="centrado">C$ 0 </td>
+                    <% } else { %>
+                      <td class="centrado">C$ <%= product.Precio_Venta %></td>
+                    <% } %>
+
+                    <% if ( product.Fecha_Ingreso == '31 de diciembre de 1969' ) { %>
+                      <td class="centrado">No se han Ingresado Existencias </td>
+                    <% } else { %>
+                      <td class="centrado"><%= product.Fecha_Ingreso %></td>
+                    <% } %>
+
+                    <% if ( Categoria == 'Cosmeticos') { %>
+                      <td class="centrado"><%= product.Fecha_Vencimiento %></td>
+                    <% } %>
+                    <td class="centrado tdExistenciaProd" id="tdExistenciaProd"><%= product.Existencia %></td>
                     <td>
                       <!-- Botones de acciones -->
                       <a href="/EditProduct/<%= product.Categoria %>/p/<%= product.Id_Producto %>" class="btn btn-success mb-1" title="Actualizar">
