--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -248,7 +248,7 @@
                   title="Historial"
                   onclick="mostrarPanelRegistroVendedor()"
                 >
-                  <i class="fa-solid fa-list"></i>Registrar un nuevo vendedor
+                  <i class="fa-solid fa-user-plus mx-1"></i></i>Registrar un nuevo vendedor
                 </button>
               </h4>
             </div>
@@ -270,7 +270,8 @@
                     <th class="centrado">Cedula</th>
                     <th class="centrado">Telefono</th>
                     <th class="centrado">Dirección</th>
-                    <th class="centrado">Acciones</th>
+                    <th class="centrado">Estado Vendedor</th>
+                    <th class="centrado"></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -280,6 +281,7 @@
                       <td class="centrado"><%= vendedor.Cedula %></td>
                       <td class="centrado"><%= vendedor.Telefono %></td>
                       <td class="centrado"><%= vendedor.Dirección %></td>
+                      <td class="centrado"><%= vendedor.Estado %></td>
                       <td>
                         <!-- Botones de acciones -->
                         <a href="/EditVendedor/<%= vendedor.Id_Vendedor %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
