--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resources/css/style.css">
-    <title>Register</title>
+    <title>Registro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"crossorigin="anonymous"/>
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"rel="stylesheet"/>
+    <link rel="stylesheet" href="/resources/css/style.css" />
+    
     <link rel="shortcut icon" href="/resources/images/favicon.ico">
 </head>
 <body>
@@ -13,26 +16,29 @@
         <h1>Registro de Usuario</h1>
         <form action="/register" method="POST">
         
-            <label for="user">Nombre Completo</label>
-            <input type="text" name="name" required>
+            <label for="ColabName" class="fw-bold">Colaborador del Almacen</label>
+            <select class="form-select my-2"  aria-label="Miembro del Almacen" id="ColabName" name="ColabName"  required>
+                <option selected disabled value="" >Seleccione un colaborador del Almacen</option>
+                <% Colaboradores.forEach((C) => { %>
+                    <option value="<%= C.Id_Persona %>"><%= C.Nombre %></option>
+                <% }) %>
+            </select>
+            
+            <label for="user" class="fw-bold mt-1">Nombre de Usuario</label>
+            <input type="text" name="ColabUser" class="form-control my-1" placeholder="Usuario" required>
 
-            <label for="user">Nombre de Usuario</label>
-            <input type="text" name="user" required>
-
-            <label for="rol">Rol</label>
-            <select name="rol" id="rol" class="select-css">
-                <option value="admin" selected>Gerente</option>
-                <option value="vendedor" selected>Vendedor</option>
+            <label for="rol" class="fw-bold mt-1">Rol del Colaborador</label>
+            <select name="ColabRol" id="ColabRol" class="form-select my-1">
+                <option value="Gerente" selected>Gerente</option>
+                <option value="Vendedor" selected>Vendedor</option>
             </select>
 
-            <br>
-            <label for="pass">Contraseña</label>
-            <input type="password" name="pass" required>
+            <label for="pass" class="fw-bold mt-1">Contraseña</label>
+            <input type="password" name="ColabPass" class="form-control my-1" required>
 
-
-
-            <div style="display: inline;">
-                <a href="/" class="btn-cancel">Cancelar</a><input type="submit" class="btn-save" value="Guardar">
+            <div style="display: inline;" class="d-flex align-items-center justify-content-center">
+                <a href="/" class="btn btn-danger mx-2">Cancelar</a>
+                <input type="submit" class="btn btn-success mx-2" value="Guardar">
             </div>
 
 		</form>		
