mensaje de la commit

--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -34,7 +34,7 @@
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
-                      <form action="/AddClient" method="post" class="needs-validation" novalidate>
+                      <form action="/AddClient" method="post" class="needs-validation" novalidate autocomplete="off">
 
                         <!-- Nombres -->
                         <div class="mt-3 mb-2">
