--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -190,7 +190,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-6 col-md-3 my-3 d-flex justify-content-center">
-                <a type="button" class="btn btn-info" href="https://www.dropbox.com/scl/fi/20n6r4p9igvkbz5nar5kd/Manual.pdf?rlkey=kvxa66r3jrfn4g5w1l4n61av8&st=wp1rgbj3&dl=1" download>
+                <a type="button" class="btn btn-info" href="https://www.dropbox.com/scl/fi/toiekmhccjw6gfcbj0rqu/Manual-de-uso-Sistema-Almacen-Jenny.pdf?rlkey=swnm6rkt9c4xf32p9zgx3kgo1&st=4lw68n0k&dl=1" download>
                   <i class="fa-solid fa-book-open"></i> Manual de Uso
                 </a>
               </div>
